# diagnostics-framework

./: .gitignore  CMakeLists.txt  build.sh
include/: cpu_monitor.h  crash_logger.h  healthd.h  mem_monitor.h  thermal_monitor.h  watchdog.h
src/: cpu_monitor.c  crash_logger.c  main.c  mem_monitor.c  thermal_monitor.c  watchdog.c
